--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>login</title>
 <link rel="stylesheet" type="text/css" href="css/normalize.css" />
 <link rel="stylesheet" type="text/css" href="css/demo.css" />
-<link rel="stylesheet" href="css/jquery.jgrowl.min.css"/>
+<link rel="stylesheet" href="js/jquery.jgrowl.min.css"/>
 <!--必要样式-->
 <link rel="stylesheet" type="text/css" href="css/component.css" />
 <!--[if IE]>
