--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 						<form action="#" name="f" method="post">
 							<div class="input_outer">
 								<span class="u_user"></span>
-								<input id="ID" name="logname" class="text" style="color: #000000 !important" type="text" placeholder="请输入账户">
+								<input id="ID" name="logname" class="text" style="color: #FFFFFF !important" type="text" placeholder="请输入账户">
 							</div>
 							<div class="input_outer">
 								<span class="us_uer"></span>
-								<input id="PASSWORD" name="logpass" class="text" style="color: #000000 !important; position:absolute; z-index:100;"value="" type="password" placeholder="请输入密码">
+								<input id="PASSWORD" name="logpass" class="text" style="color: #FFFFFF !important; position:absolute; z-index:100;"value="" type="password" placeholder="请输入密码">
 							</div>
 							<div id="LOGIN" class="mb2"><a class="act-but submit" href="javascript:;" onclick="login()" style="color: #FFFFFF">登录</a></div>
 						</form>
@@ -54,11 +54,6 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<div style="text-align:center; margin-top: -20px;">
-				<a href="register_user.html" target="_blank">注册为普通用户</a> |
-				<a href="register_admin.html" target="_blank">注册为管理员</a> |
-				<a href="register_business.html" target="_blank">注册为商家</a>
 			</div>
 		</div><!-- /container -->
 		<script src="js/TweenLite.min.js"></script>
