--- a/register_user.html
+++ b/register_user.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>普通用户注册</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h2>普通用户注册</h2>
-    <form id="userRegForm">
-        <label for="username">用户名：</label>
-        <input type="text" id="username" name="username" required>
-        <br>
-        <label for="email">邮箱：</label>
-        <input type="email" id="email" name="email" required>
-        <br>
-        <label for="password">密码：</label>
-        <input type="password" id="password" name="password" required>
-        <br>
-        <button type="submit">注册</button>
-    </form>
+    <div class="registration-container">
+        <h2>普通用户注册</h2>
+        <form id="userRegForm" class="registration-form">
+            <label for="username">用户名：</label>
+            <input type="text" id="username" name="username" required>
+            <br>
+            <label for="email">邮箱：</label>
+            <input type="email" id="email" name="email" required>
+            <br>
+            <label for="password">密码：</label>
+            <input type="password" id="password" name="password" required>
+            <br>
+            <button type="submit">注册</button>
+        </form>
+    </div>
 
     <script>
         document.getElementById('userRegForm').addEventListener('submit', function(event) {
@@ -28,14 +31,12 @@
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
-            // 这里仅为演示，实际项目中应进行后端验证，并可能包含更复杂的逻辑
             if (!username || !email || !password) {
                 alert('所有字段都必须填写');
                 return;
             }
 
-            // 假设这里调用API进行用户注册操作
-            // registerUser(username, email, password);
+
             
             alert('注册成功（此处为模拟，实际需要通过AJAX发送请求并处理服务器返回结果）');
         });
